fix for account stats text overflow

--- a/app/assets/stylesheets/feeds.css.scss
+++ b/app/assets/stylesheets/feeds.css.scss
@@ -175,7 +175,7 @@ body {
 
 			ul {
 				list-style: none;
-				width: 115px;
+				width: 125px;
 				position: absolute;
 				right: 10px;
 				top: 48px;
